--- a/ShoppingApp/ShoppingApp.Android/ShoppingApp.Android.csproj
+++ b/ShoppingApp/ShoppingApp.Android/ShoppingApp.Android.csproj
@@ -107,4 +107,9 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties XamarinHotReloadDebuggerTimeoutExceptionShoppingAppAndroidHideInfoBar="True" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
