--- a/ShoppingApp/ShoppingApp/ShoppingApp.csproj
+++ b/ShoppingApp/ShoppingApp/ShoppingApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <LangVersion>preview</LangVersion>
@@ -7,6 +7,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
+    <ApplicationIcon />
+    <OutputType>Library</OutputType>
+    <StartupObject />
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   
   <ItemGroup>
@@ -31,6 +35,12 @@
   <ItemGroup>
     <Folder Include="Resources\Images\" />
     <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Library.Product">
+      <HintPath>..\..\..\Library.Product\Library.Product\bin\Debug\netcoreapp3.1\Library.Product.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
