--- a/ShoppingApp/ShoppingApp/ShoppingApp.csproj
+++ b/ShoppingApp/ShoppingApp/ShoppingApp.csproj
@@ -14,6 +14,12 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <Compile Remove="Resources\Images\**" />
+    <EmbeddedResource Remove="Resources\Images\**" />
+    <None Remove="Resources\Images\**" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <None Remove="Resources\Fonts\FABrands.otf" />
     <None Remove="Resources\Fonts\FARegular.otf" />
     <None Remove="Resources\Fonts\FASolid.otf" />
@@ -28,19 +34,9 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Resources\Images\" />
-    <Folder Include="Services\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Library.Product">
-      <HintPath>..\..\..\Library.Product\Library.Product\bin\Debug\netcoreapp3.1\Library.Product.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
   <ItemGroup>
@@ -53,5 +49,15 @@
     <EmbeddedResource Update="Views\ShoppingCartPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Library.Product">
+      <HintPath>..\Library.Product\bin\Debug\netcoreapp3.1\Library.Product.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
