--- a/ShoppingAppAPI/ShoppingAppAPI/appsettings.json
+++ b/ShoppingAppAPI/ShoppingAppAPI/appsettings.json
@@ -6,8 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ShoppingAppAPIContext": "Server=(localdb)\\mssqllocaldb;Database=ShoppingAppAPIContext-244ee4a2-ff3a-4c42-8c4c-2ba9ca6066b6;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
