Added GetAll, Get, and Post for inventory and shopping cart

--- a/ShoppingApp/ShoppingApp.Android/ShoppingApp.Android.csproj
+++ b/ShoppingApp/ShoppingApp.Android/ShoppingApp.Android.csproj
@@ -62,6 +62,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore">
+      <Version>5.0.5</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory">
+      <Version>5.0.5</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
     </PackageReference>
