--- a/ShoppingAppAPI/ShoppingAppAPI/appsettings.json
+++ b/ShoppingAppAPI/ShoppingAppAPI/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ShoppingAppAPIdbContext": "Server=(localdb)\\mssqllocaldb;Database=ShoppingAppAPIdbContext-bf92f3f3-43f6-4632-ae94-5b07b1a22c4d;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ShoppingAppAPIContext": "Server=(localdb)\\mssqllocaldb;Database=ShoppingAppAPIContext-d559d05e-092a-4235-8e27-bd4d902b53a2;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
