added cart and inventory service

--- a/ShoppingApp/ShoppingApp.Android/ShoppingApp.Android.csproj
+++ b/ShoppingApp/ShoppingApp.Android/ShoppingApp.Android.csproj
@@ -115,6 +115,9 @@
       <Name>ShoppingApp</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Resources\drawable\thehappyminimarket.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
