--- a/ShoppingApp/ShoppingApp/ShoppingApp.csproj
+++ b/ShoppingApp/ShoppingApp/ShoppingApp.csproj
@@ -14,15 +14,14 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <Compile Remove="Resources\Images\**" />
-    <EmbeddedResource Remove="Resources\Images\**" />
-    <None Remove="Resources\Images\**" />
-  </ItemGroup>
-  
-  <ItemGroup>
     <None Remove="Resources\Fonts\FABrands.otf" />
     <None Remove="Resources\Fonts\FARegular.otf" />
     <None Remove="Resources\Fonts\FASolid.otf" />
+    <None Remove="Resources\Images\thehappyminimarket.png" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <EmbeddedResource Include="thehappyminimarket.png" />
   </ItemGroup>
   
   <ItemGroup>
@@ -45,6 +44,9 @@
     <EmbeddedResource Update="Views\InventoryPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\MainPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\ReceiptPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
@@ -60,6 +62,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <Folder Include="Resources\Images\" />
   </ItemGroup>
 </Project>
