--- a/ShoppingApp/ShoppingApp/ShoppingApp.csproj
+++ b/ShoppingApp/ShoppingApp/ShoppingApp.csproj
@@ -17,11 +17,10 @@
     <None Remove="Resources\Fonts\FABrands.otf" />
     <None Remove="Resources\Fonts\FARegular.otf" />
     <None Remove="Resources\Fonts\FASolid.otf" />
-    <None Remove="Resources\Images\thehappyminimarket.png" />
   </ItemGroup>
   
   <ItemGroup>
-    <EmbeddedResource Include="thehappyminimarket.png" />
+    <EmbeddedResource Include="Resources\Images\thehappyminimarket.png" />
   </ItemGroup>
   
   <ItemGroup>
@@ -59,9 +58,5 @@
     <Reference Include="Library.Product">
       <HintPath>..\Library.Product\bin\Debug\netcoreapp3.1\Library.Product.dll</HintPath>
     </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Resources\Images\" />
   </ItemGroup>
 </Project>
